--- a/package.json
+++ b/package.json
@@ -68,10 +68,12 @@
   "author": "EmProps Team",
   "license": "MIT",
   "dependencies": {
+    "@types/eventsource": "^3.0.0",
     "axios": "^1.6.2",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "eventsource": "^4.0.0",
     "express": "^4.18.2",
     "helmet": "^7.1.0",
     "ioredis": "^5.3.2",
