added batch number submission

--- a/docker-compose.redis-direct.yml
+++ b/docker-compose.redis-direct.yml
@@ -81,7 +81,6 @@ services:
       - emp-network
     restart: unless-stopped
 
-  # Redis-Direct Worker 2 - Simulation connector (faster)
   worker2:
     container_name: emp-worker2
     build:
@@ -113,7 +112,7 @@ services:
         condition: service_healthy
     networks:
       - emp-network
-    restart: unless-stopped
+
 
   # Redis-Direct Worker 3 - ComfyUI + Simulation
   worker3:
@@ -154,9 +153,6 @@ services:
     networks:
       - emp-network
     restart: unless-stopped
-    profiles:
-      - gpu
-      - full
 
   # Redis-Direct Worker 4 - Multiple instances (scale test)
   worker4:
@@ -166,7 +162,7 @@ services:
       dockerfile: Dockerfile.worker-direct
     environment:
       - NODE_ENV=production
-      - WORKER_ID=worker4-scale-${WORKER_INSTANCE:-1}
+      - WORKER_ID=worker4-scale
       - HUB_REDIS_URL=redis://redis:6379/0
       - WORKER_SERVICES=simulation
       - WORKER_CONNECTORS=simulation
@@ -189,11 +185,230 @@ services:
     networks:
       - emp-network
     restart: unless-stopped
-    deploy:
-      replicas: 5  # Create 5 instances for scale testing
-    profiles:
-      - scale
-      - full
+
+  worker5:
+    container_name: emp-worker5
+    build:
+      context: .
+      dockerfile: Dockerfile.worker-direct
+    environment:
+      - NODE_ENV=production
+      - WORKER_ID=worker5-scale
+      - HUB_REDIS_URL=redis://redis:6379/0
+      - WORKER_SERVICES=simulation
+      - WORKER_CONNECTORS=simulation
+      - WORKER_POLL_INTERVAL_MS=500  # Faster polling for scale test
+      - WORKER_HEARTBEAT_INTERVAL_MS=30000
+      - WORKER_MAX_CONCURRENT_JOBS=5
+      - WORKER_JOB_TIMEOUT_MINUTES=15
+      # Simulation connector config (very fast)
+      - WORKER_SIMULATION_PROCESSING_TIME=1
+      - WORKER_SIMULATION_STEPS=10
+      # Hardware specs
+      - WORKER_GPU_COUNT=0
+      - WORKER_CPU_CORES=2
+      - WORKER_RAM_GB=8
+      - LOG_LEVEL=info
+      - DISABLE_FILE_LOGGING=true
+    depends_on:
+      redis:
+        condition: service_healthy
+    networks:
+      - emp-network
+    restart: unless-stopped
+
+  worker6:
+    container_name: emp-worker6
+    build:
+      context: .
+      dockerfile: Dockerfile.worker-direct
+    environment:
+      - NODE_ENV=production
+      - WORKER_ID=worker6-scale
+      - HUB_REDIS_URL=redis://redis:6379/0
+      - WORKER_SERVICES=simulation
+      - WORKER_CONNECTORS=simulation
+      - WORKER_POLL_INTERVAL_MS=500  # Faster polling for scale test
+      - WORKER_HEARTBEAT_INTERVAL_MS=30000
+      - WORKER_MAX_CONCURRENT_JOBS=5
+      - WORKER_JOB_TIMEOUT_MINUTES=15
+      # Simulation connector config (very fast)
+      - WORKER_SIMULATION_PROCESSING_TIME=1
+      - WORKER_SIMULATION_STEPS=10
+      # Hardware specs
+      - WORKER_GPU_COUNT=0
+      - WORKER_CPU_CORES=2
+      - WORKER_RAM_GB=8
+      - LOG_LEVEL=info
+      - DISABLE_FILE_LOGGING=true
+    depends_on:
+      redis:
+        condition: service_healthy
+    networks:
+      - emp-network
+    restart: unless-stopped
+
+  worker7:
+    container_name: emp-worker7
+    build:
+      context: .
+      dockerfile: Dockerfile.worker-direct
+    environment:
+      - NODE_ENV=production
+      - WORKER_ID=worker7-scale
+      - HUB_REDIS_URL=redis://redis:6379/0
+      - WORKER_SERVICES=simulation
+      - WORKER_CONNECTORS=simulation
+      - WORKER_POLL_INTERVAL_MS=500  # Faster polling for scale test
+      - WORKER_HEARTBEAT_INTERVAL_MS=30000
+      - WORKER_MAX_CONCURRENT_JOBS=5
+      - WORKER_JOB_TIMEOUT_MINUTES=15
+      # Simulation connector config (very fast)
+      - WORKER_SIMULATION_PROCESSING_TIME=1
+      - WORKER_SIMULATION_STEPS=10
+      # Hardware specs
+      - WORKER_GPU_COUNT=0
+      - WORKER_CPU_CORES=2
+      - WORKER_RAM_GB=8
+      - LOG_LEVEL=info
+      - DISABLE_FILE_LOGGING=true
+    depends_on:
+      redis:
+        condition: service_healthy
+    networks:
+      - emp-network
+    restart: unless-stopped
+
+  worker8:
+    container_name: emp-worker8
+    build:
+      context: .
+      dockerfile: Dockerfile.worker-direct
+    environment:
+      - NODE_ENV=production
+      - WORKER_ID=worker8-scale
+      - HUB_REDIS_URL=redis://redis:6379/0
+      - WORKER_SERVICES=simulation
+      - WORKER_CONNECTORS=simulation
+      - WORKER_POLL_INTERVAL_MS=500  # Faster polling for scale test
+      - WORKER_HEARTBEAT_INTERVAL_MS=30000
+      - WORKER_MAX_CONCURRENT_JOBS=5
+      - WORKER_JOB_TIMEOUT_MINUTES=15
+      # Simulation connector config (very fast)
+      - WORKER_SIMULATION_PROCESSING_TIME=1
+      - WORKER_SIMULATION_STEPS=10
+      # Hardware specs
+      - WORKER_GPU_COUNT=0
+      - WORKER_CPU_CORES=2
+      - WORKER_RAM_GB=8
+      - LOG_LEVEL=info
+      - DISABLE_FILE_LOGGING=true
+    depends_on:
+      redis:
+        condition: service_healthy
+    networks:
+      - emp-network
+    restart: unless-stopped
+
+  worker9:
+    container_name: emp-worker9
+    build:
+      context: .
+      dockerfile: Dockerfile.worker-direct
+    environment:
+      - NODE_ENV=production
+      - WORKER_ID=worker9-scale
+      - HUB_REDIS_URL=redis://redis:6379/0
+      - WORKER_SERVICES=simulation
+      - WORKER_CONNECTORS=simulation
+      - WORKER_POLL_INTERVAL_MS=500  # Faster polling for scale test
+      - WORKER_HEARTBEAT_INTERVAL_MS=30000
+      - WORKER_MAX_CONCURRENT_JOBS=5
+      - WORKER_JOB_TIMEOUT_MINUTES=15
+      # Simulation connector config (very fast)
+      - WORKER_SIMULATION_PROCESSING_TIME=1
+      - WORKER_SIMULATION_STEPS=10
+      # Hardware specs
+      - WORKER_GPU_COUNT=0
+      - WORKER_CPU_CORES=2
+      - WORKER_RAM_GB=8
+      - LOG_LEVEL=info
+      - DISABLE_FILE_LOGGING=true
+    depends_on:
+      redis:
+        condition: service_healthy
+    networks:
+      - emp-network
+    restart: unless-stopped
+
+
+  worker10:
+    container_name: emp-worker10
+    build:
+      context: .
+      dockerfile: Dockerfile.worker-direct
+    environment:
+      - NODE_ENV=production
+      - WORKER_ID=worker10-direct
+      - HUB_REDIS_URL=redis://redis:6379/0
+      - WORKER_SERVICES=simulation
+      - WORKER_CONNECTORS=simulation
+      - WORKER_POLL_INTERVAL_MS=1000
+      - WORKER_HEARTBEAT_INTERVAL_MS=30000
+      - WORKER_MAX_CONCURRENT_JOBS=2
+      - WORKER_JOB_TIMEOUT_MINUTES=30
+      # Simulation connector config
+      - WORKER_SIMULATION_PROCESSING_TIME=5
+      - WORKER_SIMULATION_STEPS=25
+      # Hardware specs
+      - WORKER_GPU_COUNT=1
+      - WORKER_GPU_MEMORY_GB=8
+      - WORKER_GPU_MODEL=Simulation
+      - WORKER_CPU_CORES=4
+      - WORKER_RAM_GB=16
+      - LOG_LEVEL=info
+      - DISABLE_FILE_LOGGING=true
+    depends_on:
+      redis:
+        condition: service_healthy
+    networks:
+      - emp-network
+    restart: unless-stopped
+    # Redis-Direct Worker 2 - Simulation connector (faster)
+  worker11:
+    container_name: emp-worker11
+    build:
+      context: .
+      dockerfile: Dockerfile.worker-direct
+    environment:
+      - NODE_ENV=production
+      - WORKER_ID=worker11-direct
+      - HUB_REDIS_URL=redis://redis:6379/0
+      - WORKER_SERVICES=simulation
+      - WORKER_CONNECTORS=simulation
+      - WORKER_POLL_INTERVAL_MS=1000
+      - WORKER_HEARTBEAT_INTERVAL_MS=30000
+      - WORKER_MAX_CONCURRENT_JOBS=3
+      - WORKER_JOB_TIMEOUT_MINUTES=30
+      # Simulation connector config (faster)
+      - WORKER_SIMULATION_PROCESSING_TIME=3
+      - WORKER_SIMULATION_STEPS=15
+      # Hardware specs
+      - WORKER_GPU_COUNT=1
+      - WORKER_GPU_MEMORY_GB=8
+      - WORKER_GPU_MODEL=Simulation
+      - WORKER_CPU_CORES=4
+      - WORKER_RAM_GB=16
+      - LOG_LEVEL=info
+      - DISABLE_FILE_LOGGING=true
+    depends_on:
+      redis:
+        condition: service_healthy
+    networks:
+      - emp-network
+    restart: unless-stopped
+    # deploy:
+    #   replicas: 5  # Create 5 instances for scale testing
 
   # Redis Commander - Web UI for Redis inspection
   redis-commander:
