--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,6 +18,9 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
+        submodules: recursive
       
     - name: Setup Node.js
       uses: actions/setup-node@v4
@@ -53,8 +56,8 @@ jobs:
         
     - name: Build and push API Docker image
       run: |
-        # Build API Docker image (Docker handles the monorepo dependencies)
-        docker build -f apps/api/Dockerfile.railway -t emprops/emp-job-queue-api:latest -t emprops/emp-job-queue-api:${{ steps.get_tag.outputs.tag }} .
+        # Build API Docker image using simplified CI Dockerfile
+        docker build -f apps/api/Dockerfile.ci -t emprops/emp-job-queue-api:latest -t emprops/emp-job-queue-api:${{ steps.get_tag.outputs.tag }} .
         
         # Push both tags
         docker push emprops/emp-job-queue-api:latest
