--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "build:worker": "turbo run build --filter=worker",
     "build:monitor": "turbo run build --filter=monitor",
     "build:core": "turbo run build --filter=@emp/core",
-    "machines:basic:up": "docker compose -f apps/machines/basic_machine/docker-compose.yml up",
-    "machines:basic:up:build": "docker compose -f apps/machines/basic_machine/docker-compose.yml up --build",
+    "machines:basic:up": "pnpm machines:basic:down && docker compose -f apps/machines/basic_machine/docker-compose.yml up",
+    "machines:basic:up:build": "pnpm machines:basic:down && docker compose -f apps/machines/basic_machine/docker-compose.yml up --build",
     "machines:basic:down": "docker compose -f apps/machines/basic_machine/docker-compose.yml down",
     "machines:base:up": "docker compose -f apps/machines/base_machine/docker-compose.yml up",
     "machines:base:up:build": "docker compose -f apps/machines/base_machine/docker-compose.yml up --build",
