fix(api,monitor): fix package.json path resolution and connection panel errors
- Make package.json import more robust with multiple fallback paths
- Fix ConnectionsPanel to only fetch when connected
- Use dynamic API URL from WebSocket connection
- Prevent ERR_CONNECTION_REFUSED spam when disconnected
- Add proper error handling for missing package.json in Docker

--- a/apps/machines/basic_machine/Dockerfile
+++ b/apps/machines/basic_machine/Dockerfile
@@ -50,7 +50,7 @@ RUN mkdir -p \
     /workspace/scripts
 
 # Stage 3: Final image
-FROM ai-base
+FROM ai-base as installed-comfy
 
 # No build-time environment variables needed - all handled at runtime
 
@@ -80,6 +80,8 @@ RUN echo "Installing custom nodes (cache bust: $CUSTOM_NODES_CACHE_BUST)" && \
     # Install custom nodes WITHOUT environment variables (no .env files created)
     # Environment variables and .env files will be processed at runtime
     node /service-manager/src/services/comfyui-installer.js --build-time --custom-nodes-only --skip-env
+
+FROM installed-comfy
 
 # Inject machine version and build info AFTER custom nodes (for better caching)
 ARG MACHINE_VERSION=latest
