--- a/apps/worker/package.json
+++ b/apps/worker/package.json
@@ -31,7 +31,8 @@
     "ws": "^8.14.2",
     "ioredis": "^5.3.2",
     "uuid": "^9.0.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "node-fetch": "^3.3.2"
   },
   "devDependencies": {
     "@types/node": "^20.9.0",
