updated env setup

--- a/config/environments/components/api.env
+++ b/config/environments/components/api.env
@@ -9,7 +9,8 @@ LOG_LEVEL=info
 METRICS_ENABLED=true
 METRICS_PORT=9090
 ENABLE_CORS=true
-CORS_ORIGINS=http://localhost:3000,http://localhost:3001,https://emp-job-queue-production.up.railway.app,https://qmonitor.emerge.pizza
+CORS_ORIGINS=http://localhost:3000,http://localhost:3001,https://emp-job-queue-production.up.railway.app,https://qmonitor.emerge.pizza,https://qwebhook.emerge.pizza
+
 [local]
 HOST=0.0.0.0
 PORT=3331
@@ -20,13 +21,4 @@ CORS_ORIGIN=http://localhost:3333
 HOST=qredapi.emerge.pizza
 PORT=80
 URL=qredapi.emerge.pizza
-CORS_ORIGIN=http://qmonitor.emerge.pizza
-
-[prod-test]
-HOST=0.0.0.0
-PORT=3331
-URL=http://${HOST}:${PORT}
-CORS_ORIGIN=http://localhost:3333
-LOG_LEVEL=debug
-MAX_PENDING_JOBS=1000
-JOB_CLEANUP_INTERVAL_MINUTES=10
+CORS_ORIGIN=http://qmonitor.emerge.pizza,https://webhook.emerge.pizza
