--- a/config/environments/components/webhook-service.env
+++ b/config/environments/components/webhook-service.env
@@ -15,18 +15,10 @@ HOST=0.0.0.0
 PORT=3332
 URL=http://${HOST}:${PORT}
 CORS_ORIGINS=http://localhost:3333,http://localhost:3331,http://localhost:3001
+LOG_LEVEL=debug
 
 [production]
-HOST=0.0.0.0
-PORT=3332
-URL=https://webhook-service-production.railway.app
-CORS_ORIGINS=https://qmonitor.emerge.pizza,https://qredapi.emerge.pizza
-
-[prod-test]
-HOST=0.0.0.0
-PORT=3332
-URL=http://${HOST}:${PORT}
-CORS_ORIGINS=http://localhost:3333,http://localhost:3331,http://localhost:3001
-LOG_LEVEL=debug
-WEBHOOK_TIMEOUT_MS=15000
-MAX_RETRY_ATTEMPTS=2
+HOST=https://qwebhook.emerge.pizza
+PORT=80
+URL=https://qwebhook.emerge.pizza
+CORS_ORIGINS=http://localhost:3333,https://qmonitor.emerge.pizza,https://qredapi.emerge.pizza
