--- a/apps/api/.env
+++ b/apps/api/.env
@@ -1,6 +1,6 @@
 REDIS_URL=redis://default:JQSoNVpIPsuaDQYicNvocglialxPrTjj@ballast.proxy.rlwy.net:30645
-PORT=3331
-HOST=0.0.0.0
+PORT=80
+HOST=qredapi.emerge.pizza
 CORS_ORIGINS=http://localhost:3000,http://localhost:3001,https://emp-job-queue-production.up.railway.app,https://qmonitor.emerge.pizza,https://qwebhook.emerge.pizza
 LOG_LEVEL=info
-CURRENT_ENV=prod-test
+CURRENT_ENV=production
