--- a/apps/machine/src/config/service-mapping.json
+++ b/apps/machine/src/config/service-mapping.json
@@ -27,7 +27,7 @@
       "service": [
         {
           "capability": "comfyui",
-          "connector": "ComfyUIWebsocketConnector",
+          "connector": "ComfyUIConnector",
           "type": "internal"
         }
       ],
