--- a/config/environments/components/comfyui.env
+++ b/config/environments/components/comfyui.env
@@ -24,6 +24,7 @@ EXPOSED_CONTAINER_PORT_BASE=8188
 RESOURCE_BINDING=mock_gpu
 
 [remote]
+REMOTE=true
 REMOTE_HOST=${REMOTE_COMFYUI_HOST}
 REMOTE_PORT=${REMOTE_COMFYUI_PORT}
 REMOTE_USER=${REMOTE_COMFYUI_USERNAME}
@@ -33,5 +34,8 @@ RESOURCE_BINDING=shared
 
 [production]
 HOST=localhost
-EXPOSE_PORTS=false
-REMOTE=false
+
+[production-exposed]
+EXPOSE_PORTS=true
+EXPOSED_HOST_PORT_BASE=3188
+EXPOSED_CONTAINER_PORT_BASE=8188
