--- a/config/environments/components/webhook-service.env
+++ b/config/environments/components/webhook-service.env
@@ -13,12 +13,11 @@ CACHE_REFRESH_INTERVAL_MS=30000
 [local]
 HOST=0.0.0.0
 PORT=3332
-URL=http://${HOST}:${PORT}
+URL=http://${WEBHOOK_SERVICE_HOST}:${WEBHOOK_SERVICE_PORT}
 CORS_ORIGINS=http://localhost:3333,http://localhost:3331,http://localhost:3001
 LOG_LEVEL=debug
 
 [production]
 HOST=https://qwebhook.emerge.pizza
-PORT=80
-URL=https://qwebhook.emerge.pizza
+URL=http://${WEBHOOK_SERVICE_HOST}
 CORS_ORIGINS=http://localhost:3333,https://qmonitor.emerge.pizza,https://qredapi.emerge.pizza
