--- a/apps/api/railway.toml
+++ b/apps/api/railway.toml
@@ -1,6 +1,6 @@
 [build]
 builder = "dockerfile"
-dockerfilePath = "Dockerfile.railway"
+dockerfilePath = "Dockerfile.standalone"
 
 [deploy]
 restartPolicyType = "always"
